# project_dio

./: .gitignore  Dockerfile  anotacoes.txt  docker-compose.yml  pyproject.toml
configs/: settings.py
src/api/: main.py  schemas.py
src/generation/: generator.py  pipeline.py  prompt_builder.py
src/ingestion/: classifier.py  embedder.py  pipeline.py
src/ingestion/chunkers/: hierarchical_chunker.py  semantic_chunker.py  table_chunker.py
src/ingestion/parsers/: ocr_parser.py  table_parser.py  text_parser.py
src/retrieval/: bm25_search.py  compressor.py  fusion.py  pipeline.py  query_expander.py  reranker.py  vector_search.py
tests/: test_collection.py  test_delete.py  test_ingestion.py  test_pars_tables.py  teste_retrieval.py
